CRUD product domment done
